INPUT element: Implicit form submission should reset setTextAsOfLastFormControlChangeEvent even if no <form>.

BUG=700842

Review-Url: https://codereview.chromium.org/2749513003
Cr-Commit-Position: refs/heads/master@{#456644}

Former-commit-id: 1eff0d16f548ffa09d45de590c17f780406ae05e